add simple markup

--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -1,3 +1,6 @@
-@import 'assets/reset';
-@import 'assets/fonts';
-
+@import 'assets/reset.scss';
+@import 'assets/fonts.scss';
+@import 'assets/base-assets/nav.scss';
+@import 'assets/base-assets/content.scss';
+@import 'assets/base-assets/card.scss';
+@import 'assets/base-assets/description.scss';
