--- a/app/scss/assets/_fonts.scss
+++ b/app/scss/assets/_fonts.scss
@@ -1,5 +1,9 @@
 @import 'settings';
 
+@include font-face('Roboto', 'Regular');
+@include font-face('Roboto', 'Medium');
+@include font-face('Roboto', 'Bold')
+
 /*fonts*/
 
 /* According to include your custom fonts into the project,
