--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -9,23 +9,13 @@ body {
     height: 100%;
 }
 
-body {
-    background: url('https://media.giphy.com/media/11RwocOdukxqN2/giphy.gif') center center/75vw 75vh no-repeat;
-    background: red;
-    @include headerIsFixed(false);
-}
-
 .wrapper {
-    display: table;
+    display: block;
     width: 100%;
     height: 100%;
-    table-layout: fixed;
-}
-
-.main {
-    display: table-row;
-    height: 100%;
-    height: 1px;
+    padding-left: 220px;
+    padding-top: 50px;
+    background: aliceblue;
 }
 
 .clearfix {
@@ -34,10 +24,6 @@ body {
         clear: both;
         content: '';
     }
-}
-
-.transition {
-    transition: all 0.15s ease-in;
 }
 
 .myContainer {
