--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -15,7 +15,7 @@ body {
     height: 100%;
     padding-left: 220px;
     padding-top: 50px;
-    background: aliceblue;
+    background: #F0F8FF;
 }
 
 .clearfix {
