--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -6,38 +6,33 @@
   display: inline-block;
   position: relative;
   z-index: 0;
-  &::after {
-    content: '';
-    position: absolute;
-    width: 200px;
-    height: 300px;
-    top: 0px;
-    left: 0px;
-    display: block;
-    background-color: yellow;
-    z-index: -1;
-    transition: all 0.15s ease-in;
-  }
+  transition: all 0.15s ease-in;
+  box-shadow: none;
+  // &::after {
+  //   content: '';
+  //   position: absolute;
+  //   width: 200px;
+  //   height: 300px;
+  //   top: 0px;
+  //   left: 0px;
+  //   display: block;
+  //   background-color: yellow;
+  //   z-index: -1;
+  //   transition: all 0.15s ease-in;
+  // }
   &:focus {
-    outline: none;
-    &::after {
-      content: '';
-      position: absolute;
-      top: 10px;
-      left: -10px;
-      display: block;
-      background-color: yellow;
-    }
+    box-shadow: -9px 9px yellow;
   }
   &:hover {
-    &::after {
-      content: '';
-      position: absolute;
-      top: 10px;
-      left: -10px;
-      display: block;
-      background-color: yellow;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   top: 10px;
+    //   left: -10px;
+    //   display: block;
+    //   background-color: yellow;
+    // }
+    box-shadow: -9px 9px yellow;
   }
   &-body {
     // background: url(../../img/images.jpg);
