--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -2,7 +2,7 @@
 .nav {
   width: 200px;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: #4A4A4A;
   padding: 30px 15px;
   box-shadow: 4px 0px 11px 4px #7c7c7c;
   position: fixed;
