create second page

--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -4,3 +4,4 @@
 @import 'assets/base-assets/content.scss';
 @import 'assets/base-assets/card.scss';
 @import 'assets/base-assets/description.scss';
+@import 'assets/base-assets/collection.scss';
