--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -60,9 +60,9 @@
   }
   &-holder {
     position: relative;
-    width: 100%;
+    width: 30em;
     z-index: 1;
-    height: 100%;
+    height: 20em;
     box-shadow: 0 0 10px 0px black;
     padding-top: 30%;
     text-align: center;
