--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -32,19 +32,23 @@
   }
   &-list {
     &__item {
-      font-family: 'Roboto-Bold';
-      color: color('gray');
-      display: inline-block;
-      padding: 10px 15px;
-      border-radius: 20px;
-      transition: all 0.15s ease-in;
+      display: block;
+      width: 100%;
       margin-bottom: 10px;
-      font-size: 20px;
-      &:hover {
-        background: color('active');
-        color: #000;
+      span {
+        border-radius: 20px;
+        padding: 10px 15px;
+        font-size: 20px;
+        display: inline-block;
         font-family: 'Roboto-Bold';
-        box-shadow: 2px 4px 16px -3px #000;
+        color: color('gray');
+        transition: all 0.15s ease-in;
+        &:hover {
+          background: color('active');
+          color: #000;
+          font-family: 'Roboto-Bold';
+          box-shadow: 2px 4px 16px -3px #000;
+        }
       }
       &:focus {
         background: color('active');
