--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -5,3 +5,4 @@
 @import 'assets/base-assets/card.scss';
 @import 'assets/base-assets/description.scss';
 @import 'assets/base-assets/collection.scss';
+@import 'assets/base-assets/time.scss';
