--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -25,7 +25,7 @@
   &-title {
     color: color('primary');
     font-family: 'Roboto-Bold';
-    font-size: 35px;
+    font-size: 2.2em;
     display: block;
     margin-bottom: 80px;
     padding-left: 15px;
