--- a/app/scss/assets/base-assets/time.scss
+++ b/app/scss/assets/base-assets/time.scss
@@ -1,7 +1,7 @@
 .time {
   position: absolute;
   top: 4em;
-  left: 0;
+  right: 4em;
   text-align: right;
   &-count {
     color: color('primary');
