--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -1,8 +1,9 @@
 // START: collection
 .collection-wrapper {
-  margin-top: 15em;
-  margin-top: 15em;
   height: 380px;
+  position: absolute;
+  right: 0;
+  top: 18em;
 }
 .collection {
   width: 30em;
