--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -1,15 +1,16 @@
 // START: nav
 .nav-hidden {
-  width: 370px;
+  width: 45em;
   height: 100%;
   padding: 7em 2em;
   padding-top: 13em;
-  padding-left: 9em;
+  padding-left: 20em;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 97;
   display: block;
+  background: url('../img/bg_fx.png');
   // &::after {
   //   content: '';
   //   position: absolute;
@@ -68,19 +69,19 @@
   width: 100px;
   height: 100%;
   overflow: hidden;
-  &::after {
-    content: '';
-    position: absolute;
-    border-radius: 0 100% 100% 0;
-    box-shadow: inset -2px 0px 0px 0px #000;
-    top: 0;
-    right: 0px;
-    width: 200px;
-    height: 100%;
-    background: #1e2124;
-    opacity: 0.8;
-    z-index: 100;
-  }
+  // &::after {
+  //   content: '';
+  //   position: absolute;
+  //   border-radius: 0 100% 100% 0;
+  //   box-shadow: inset -2px 0px 0px 0px #000;
+  //   top: 0;
+  //   right: 0px;
+  //   width: 200px;
+  //   height: 100%;
+  //   background: #1e2124;
+  //   opacity: 0.8;
+  //   z-index: 100;
+  // }
   &-arrow {
     width: 50px;
     height: 50px;
