--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -15,10 +15,10 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    padding-left: 30em;
     padding-top: 3.2em;
     z-index: 1;
     background-size: cover;
+    overflow: hidden;
     background: url('https://lc-www-live-s.legocdn.com/r/www/r/catalogs/-/media/catalogs/activities/star%20wars/2016/posters/the%20force%20awakens%20video%20game%20may%20the%20fourth/douglas_may4th_poster_webpreview_1488x838_may.jpg?l.r2=853401640');
     &::after {
         content: '';
