--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -8,6 +8,7 @@
   z-index: 97;
   display: block;
   background: url('../img/bg_fx.png');
+  display: none;
   // &::after {
   //   content: '';
   //   position: absolute;
