--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -4,83 +4,131 @@
   &-text {
     &__title {
       font-family: 'Roboto-Bold';
-      font-size: 22px;
-      color: color('dark-gray');
-      margin-bottom: 20px;
+      font-size: 3em;
+      color: color('primary');
+      margin-bottom: 0.6em;
       display: block;
+    }
+    &__subtitle {
+      font-family: 'Roboto-Bold';
+      text-transform: uppercase;
+      font-size: 1em;
+      color: color('active');
     }
     &__desc {
       font-family: 'Roboto-Regular';
-      font-size: 16px;
-      color: color('dark-gray');
+      color: color('primary');
+      font-size: 1em;
       line-height: 1.3;
-      margin-bottom: 20px;
-      width: 60%;
+      width: 50em;
+      margin-bottom: 1em;
+    }
+    &__count {
+      display: block;
+      margin-bottom: 1em;
+      .icon {
+        display: inline-block;
+        vertical-align: middle;
+        width: 16px;
+        height: 16px;
+        background: url('../img/layers.png');
+      }
+      .descroption-title {
+        color: color('primary');
+        vertical-align: middle;
+        font-family: 'Roboto-Regular';
+        font-size: 0.8em;
+        display: inline-block;
+        opacity: 0.6;
+      }
     }
   }
   &-action {
     padding: 20px 0;
-  }
-}
-.btn {
-  font-family: 'Roboto-Regular';
-  font-size: 16px;
-  color: color('primary');
-  border-radius: 20px;
-  padding: 10px 20px;
-  background: color('dark-grey');
-  display: inline-block;
-  transition: all 0.15s ease-in;
-  &:hover {
-    box-shadow: 1px 4px 8px #686868;
-  }
-  &:focus {
-    outline: none;
-    box-shadow: 1px 4px 8px #686868;
+    position: relative;
   }
 }
 
 .sort-card {
   display: inline-block;
-  position: relative;
-  margin-left: 60px;
+  position: absolute;
+  right: 0;
+  top: 1.3em;
   &__title {
-    font-family: 'Roboto-Regular';
-    font-size: 16px;
-    color: color('primary');
-    border-radius: 20px;
-    padding: 10px 20px;
-    background: color('dark-grey');
+    font-family: 'Roboto-Bold';
+    font-size: 1em;
+    color: #c0c0c0;
+    border-radius: 2em;
+    padding: 0.8em 3em;
+    display: inline-block;
+    border: 2px solid #c0c0c0;
+    transition: all 0.15s ease-in;
+    position: relative;
+    z-index: 2;
     &:hover {
-      box-shadow: 1px 4px 8px #686868;
+      background: #242c33;
+      border: 2px solid #242c33;
+      color: color('primary');
+      box-shadow: 0px 5px 9px #000;
     }
     &:focus {
       outline: none;
-      box-shadow: 1px 4px 8px #686868;
+      background: #242c33;
+      border: 2px solid #242c33;
+      color: color('primary');
+      box-shadow: 0px 5px 9px #000;
+    }
+    span {
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .icon {
+      width: 1em;
+      height: 1em;
+      display: inline-block;
+      vertical-align: middle;
+      background: url('../img/down-arrow.png');
+      margin-left: 0.3em;
+    }
+    &.active {
+      background: #242c33;
+      border: 2px solid #242c33;
+      color: color('primary');
+      box-shadow: 0px 5px 9px #000;
     }
   }
   &-list {
     position: absolute;
+    width: 14em;
     z-index: 9;
-    top: 36px;
+    top: 2.9em;
     left: 50%;
-    transform: translate(-50%, 0);
     display: none;
+    transform: translate(-50%, 0);
+    z-index: 1;
+    &.active {
+      display: block;
+      box-shadow: 0px 2px 20px 3px black;
+    }
     &__item {
-      font-family: 'Roboto-Regular';
-      color: color('gray');
-      display: inline-block;
-      padding: 10px 15px;
-      font-size: 16px;
-      background: color('dark-grey');
+      font-family: 'Roboto-Bold';
+      text-align: center;
+      color: color('primary');
+      display: block;
+      width: 100%;
+      padding: 1em;
+      font-size: 1em;
+      background: #242c33;
       transition: all 0.15s ease-in;
+      border-top: 2px solid #000;
       &:hover {
         background: yellow;
         color: color('dark-grey');
+        color: #000;
       }
       &:focus {
         background: yellow;
-        color: color('dark-grey');
+        color: #000;
         outline: none;
       }
     }
