--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -40,6 +40,13 @@ body {
     }
 }
 
+.content-container {
+    width: 69.4em;
+    position: absolute;
+    top: 3em;
+    right: 0;
+}
+
 .myContainer {
     position: relative;
     max-width: gridValue('container');
@@ -47,5 +54,35 @@ body {
 
     @extend .clearfix;
 }
+
+.btn {
+    font-family: 'Roboto-Bold';
+    font-size: 1em;
+    color: #c0c0c0;
+    border-radius: 2em;
+    padding: 0.8em 4em;
+    display: inline-block;
+    border: 2px solid #c0c0c0;
+    transition: all 0.15s ease-in;
+    &:hover {
+        color: #000;
+        border: 2px solid color('active');
+        background: color('active');
+        box-shadow: 0px 3px 9px #000;
+    }
+    &:focus {
+      outline: none;
+      color: #000;
+      border: 2px solid color('active');
+      background: color('active');
+      box-shadow: 0px 3px 9px #000;
+    }
+    &.active {
+        color: #000;
+        border: 2px solid color('active');
+        background: color('active');
+        box-shadow: 0px 3px 9px #000;
+    }
+  }
 
 /*END:base*/
