--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 97;
+  z-index: 99;
   display: block;
   background: url('../img/bg_fx.png');
   display: none;
@@ -69,22 +69,11 @@
   top: 0;
   left: 0;
   z-index: 99;
-  width: 100px;
+  width: 148px;
   height: 100%;
   overflow: hidden;
-  // &::after {
-  //   content: '';
-  //   position: absolute;
-  //   border-radius: 0 100% 100% 0;
-  //   box-shadow: inset -2px 0px 0px 0px #000;
-  //   top: 0;
-  //   right: 0px;
-  //   width: 200px;
-  //   height: 100%;
-  //   background: #1e2124;
-  //   opacity: 0.8;
-  //   z-index: 100;
-  // }
+  background: url('../img/bg_fx_innerpage.png');
+
   &-arrow {
     width: 50px;
     height: 50px;
