--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -41,10 +41,10 @@ body {
 }
 
 .content-container {
-    width: 69.4em;
+    width: 69em;
     position: absolute;
     top: 3em;
-    right: 0;
+    right: 21.7%;
 }
 
 .myContainer {
