--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -61,20 +61,18 @@
     border-radius: 2em;
     padding: 0.8em 3em;
     display: inline-block;
-    border: 2px solid #c0c0c0;
+    box-shadow: inset 0 0 0 2px #c0c0c0;
     transition: all 0.15s ease-in;
     position: relative;
     z-index: 2;
     &:hover {
       background: #242c33;
-      border: 2px solid #242c33;
       color: color('primary');
       box-shadow: 0px 5px 9px #000;
     }
     &:focus {
       outline: none;
       background: #242c33;
-      border: 2px solid #242c33;
       color: color('primary');
       box-shadow: 0px 5px 9px #000;
     }
@@ -92,7 +90,6 @@
     }
     &.active {
       background: #242c33;
-      border: 2px solid #242c33;
       color: color('primary');
       box-shadow: 0px 5px 9px #000;
     }
