--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -62,24 +62,21 @@ body {
     border-radius: 2em;
     padding: 0.8em 4em;
     display: inline-block;
-    border: 2px solid #c0c0c0;
+    box-shadow: inset 0 0 0 2px #c0c0c0;
     transition: all 0.15s ease-in;
     &:hover {
         color: #000;
-        border: 2px solid color('active');
         background: color('active');
         box-shadow: 0px 3px 9px #000;
     }
     &:focus {
       outline: none;
       color: #000;
-      border: 2px solid color('active');
       background: color('active');
       box-shadow: 0px 3px 9px #000;
     }
     &.active {
         color: #000;
-        border: 2px solid color('active');
         background: color('active');
         box-shadow: 0px 3px 9px #000;
     }
