fixed sort list

--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -96,9 +96,9 @@
   }
   &-list {
     position: absolute;
-    width: 14em;
+    width: 88%;
     z-index: 9;
-    top: 2.9em;
+    top: 2.7em;
     left: 50%;
     display: none;
     transform: translate(-50%, 0);
