fixed sort list

--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -99,7 +99,7 @@
     width: 88%;
     z-index: 9;
     top: 2.7em;
-    left: 50%;
+    left: 8em;
     display: none;
     transform: translate(-50%, 0);
     z-index: 1;
