--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -86,6 +86,7 @@
     box-shadow: 2px 4px 16px -3px #000;
     &:focus {
       outline: none;
+      box-shadow: 0 0 0 2px #ff0;
     }
     &::before {
       content: '';
