fixed collection wrapper

--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -2,7 +2,7 @@
 .collection-wrapper {
   height: 28em;
   position: absolute;
-  right: -10em;
+  left: 15em;
   top: 18em;
   overflow: hidden;
   white-space: nowrap;
