--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -4,6 +4,7 @@
   position: absolute;
   left: 15em;
   top: 18em;
+  padding: 20px;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -14,7 +15,7 @@
   background: #ccc;
   position: relative;
   z-index: 9;
-  margin: 20px;
+  margin: 0 20px;
   &:hover {
     .collection-back {
       &__one {
