--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -9,23 +9,31 @@
   transition: all 0.15s ease-in;
   box-shadow: none;
   &:focus {
-    box-shadow: -9px 9px color('active');
+    outline: none;
     .card-title {
       bottom: 2.2em;
       left: 1em;
     }
     .card-title-hide {
       opacity: 1;
+    }
+    .card-body {
+      margin: -9px 9px;
+      box-shadow: -9px 9px color('active');
+      outline: none;
     }
   }
   &:hover {
-    box-shadow: -9px 9px color('active');
     .card-title {
       bottom: 2.2em;
       left: 1em;
     }
     .card-title-hide {
       opacity: 1;
+    }
+    .card-body {
+      box-shadow: -9px 9px color('active');
+      margin: -9px 9px;
     }
   }
   &-body {
@@ -33,6 +41,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    transition: all 0.15s ease-in;
   }
   &-title {
     font-family: 'Roboto-Medium';
