--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -50,20 +50,24 @@
 }
 
 .sort-card {
-  display: inline-block;
   position: absolute;
   right: 0.9em;
   top: 1.3em;
+  width: 16em;
   &__title {
     font-family: 'Roboto-Bold';
     font-size: 1em;
     color: #c0c0c0;
     border-radius: 2em;
-    padding: 0.8em 3em;
+    width: 100%;
+    text-align: center;
+    padding: 0.8em;
     display: inline-block;
     box-shadow: inset 0 0 0 2px #c0c0c0;
     transition: all 0.15s ease-in;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 2;
     &:hover {
       background: #242c33;
@@ -95,9 +99,9 @@
     }
   }
   &-list {
-    position: relative;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 2.5em;
+    left: 1em;
     width: 13.8em;
     display: none;
     margin: 0 auto;
