--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -37,11 +37,51 @@
     }
   }
   &-body {
-    background: url('https://i.pinimg.com/236x/63/9a/0a/639a0a64cb485e51af053e6403a00289--captain-america--steve-rogers.jpg');
     width: 100%;
     height: 100%;
     position: relative;
     transition: all 0.15s ease-in;
+    background-size: cover;
+    &.body-bg1 {
+      background-size: cover;
+      background: url('https://cdn.vox-cdn.com/thumbor/nWGjg39CW8TDciTxJ3qsSKJrN7w=/0x0:1381x1019/1200x800/filters:focal(581x400:801x620)/cdn.vox-cdn.com/uploads/chorus_image/image/54857225/xalien_covenant_fill.jpg.pagespeed.ic.rPyCbS72Kx.0.jpg') no-repeat center center;
+    }
+    &.body-bg2 {
+      background-size: cover;
+      background: url('https://upload.wikimedia.org/wikipedia/en/a/ad/Crimson_Peak_theatrical_poster.jpg') no-repeat center center;
+    }
+    &.body-bg3 {
+      background-size: cover;
+      background: url('https://moviefiles.alphacoders.com/534/poster-thumb-534.jpg') no-repeat center center;      
+    }
+    &.body-bg4 {
+      background-size: cover;
+      background: url('https://www.virginmegastore.ae/medias/sys_master/root/h7d/hb8/8822717579294/Snow-White-and-the-Seven-Dwarfs-602070-Detail.jpg') no-repeat center center;
+    }
+    &.body-bg5 {
+      background-size: cover;
+      background: url('https://rickihobson.files.wordpress.com/2015/08/mv5bmtq4mjgwntmyov5bml5banbnxkftztgwmtc1mji0nde-1-_v1_sx640_sy720_.jpg?w=640') no-repeat center center;
+    }
+    &.body-bg6 {
+      background-size: cover;
+      background: url('http://cineplex.cdn2.dmlib.com/u/Assets/a1/DE/C0/a1-1014167/s1-9348508/p_800x1200_ForceAwakens_En_031916.jpg') no-repeat center center;
+    }
+    &.body-bg7 {
+      background-size: cover;
+      background: url('https://i.ytimg.com/vi/xHGqk5onVKw/maxresdefault.jpg') no-repeat center center;
+    }
+    &.body-bg8 {
+      background-size: cover;
+      background: url('https://upload.wikimedia.org/wikipedia/en/a/ad/Crimson_Peak_theatrical_poster.jpg') no-repeat center center;
+    }
+    &.body-bg9 {
+      background-size: cover;
+      background: url('https://image.tmdb.org/t/p/w300_and_h450_bestv2/4gxVAn1YLYqXAwidGanTD4RxIJT.jpg') no-repeat center center;
+    }
+    &.body-bg10 {
+      background-size: cover;
+      background: url('https://static1.squarespace.com/static/53323bb4e4b0cebc6a28ffa2/t/582a40aaebbd1a32fd82479d/1479164110252/Logan+Peru+poster') no-repeat center center;
+    }
   }
   &-title {
     font-family: 'Roboto-Medium';
