--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -19,7 +19,7 @@ body {
     z-index: 1;
     background-size: cover;
     overflow: hidden;
-    background: url('https://lc-www-live-s.legocdn.com/r/www/r/catalogs/-/media/catalogs/activities/star%20wars/2016/posters/the%20force%20awakens%20video%20game%20may%20the%20fourth/douglas_may4th_poster_webpreview_1488x838_may.jpg?l.r2=853401640');
+    background: url('https://cdn-images-1.medium.com/max/1600/1*aT0YAgCTsQgGAO6K0TK0DA.jpeg');
     &::after {
         content: '';
         position: absolute;
@@ -29,6 +29,19 @@ body {
         height: 100%;
         z-index: -1;
         background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
+    }
+    &--inner {
+        background: url('https://i.imgur.com/Z2lWU8K.jpg');
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
+        }
     }
 }
 
