--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -8,9 +8,9 @@
   z-index: 999;
 }
 .nav-hidden {
-  width: 40.6em;
+  width: 44em;
   height: 100%;
-  display: none;
+  display: block;
   background: url('../img/bg_fx_menu.png');
   left: 3.6em;
   top: 0;
