--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -8,6 +8,26 @@
   z-index: 0;
   transition: all 0.15s ease-in;
   box-shadow: none;
+  &:first-child {
+    .card-body {
+      .card-title {
+        display: block;
+      }
+      .card-title-hide {
+        display: block;
+      }
+    }
+  }
+  &:nth-child(2) {
+    .card-body {
+      .card-title {
+        display: block;
+      }
+      .card-title-hide {
+        display: block;
+      }
+    }
+  }
   &:focus {
     outline: none;
     .card-title {
@@ -92,6 +112,7 @@
     bottom: 1em;
     left: 1em;
     transition: all 0.15s ease-in;
+    display: none;
   }
   &-title-hide {
     font-family: 'Roboto-Medium';
@@ -102,6 +123,7 @@
     left: 1em;
     opacity: 0;
     transition: all 0.15s ease-in;
+    display: none;
   }
 }
 // END: card
