--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -10,7 +10,7 @@
 .nav-hidden {
   width: 43em;
   height: 100%;
-  display: block;
+  display: none;
   background: url('../img/bg_fx_menu.png');
   left: 3.6em;
   top: 0;
