--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -2,6 +2,7 @@
 .collection-wrapper {
   height: 28em;
   position: absolute;
+  // add left: 15em if collection more than 2 items and nav is hidden
   left: 50em;
   top: 18em;
   padding: 20px;
