--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -8,6 +8,8 @@
   z-index: 0;
   transition: all 0.15s ease-in;
   box-shadow: none;
+  transform: translateY(-250px);
+
   &:first-child {
     .card-body {
       .card-title {
