--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -8,7 +8,7 @@
   z-index: 0;
   transition: all 0.15s ease-in;
   box-shadow: none;
-  transform: translateY(-250px);
+  transform: translateY(0);
 
   &:first-child {
     .card-body {
