add adaptive on inner page (1366/768 1920/1080)

--- a/app/scss/assets.scss
+++ b/app/scss/assets.scss
@@ -1,4 +1,5 @@
 @import 'assets/reset.scss';
+@import 'assets/media.scss';
 @import 'assets/fonts.scss';
 @import 'assets/base-assets/nav.scss';
 @import 'assets/base-assets/content.scss';
