--- a/app/scss/assets/base-assets/time.scss
+++ b/app/scss/assets/base-assets/time.scss
@@ -3,6 +3,10 @@
   top: 4em;
   right: 8em;
   text-align: right;
+  font-size: 16px;
+  @media screen and (min-width: 1920px) {
+    font-size: 20px;
+  }
   &-count {
     color: color('primary');
     font-family: 'Roboto-Bold';
