--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -1,5 +1,5 @@
 /*base*/
-
+// breakpoint
 @import 'assets/settings';
 @import 'assets/base-assets/header';
 @import 'assets/base-assets/footer';
@@ -57,7 +57,14 @@ body {
     width: 69em;
     position: absolute;
     top: 3em;
-    right: 21.7%;
+    left: 50%;
+    transform: translate(-50%, 10em);
+    @media screen and (min-width: 1920px) and (max-height: 1080px) {
+        width: 94em;
+    }
+    @media screen and (max-width: 1366px) {
+        width: 53.2em;
+    }
 }
 
 .myContainer {
