--- a/app/scss/assets/base-assets/card.scss
+++ b/app/scss/assets/base-assets/card.scss
@@ -9,9 +9,14 @@
   transition: all 0.15s ease-in;
   box-shadow: none;
   transform: translateY(0);
-  @media screen and (min-width: 1920px) and (max-height: 1080px) {
+  @media screen and (min-width: 1920px) {
     width: 280px;
     height: 440px;
+  }
+  @media screen and (min-width: 3840px) {
+    width: 520px;
+    height: 840px;
+    margin: 0 20px 35px 20px;
   }
   @media screen and (max-width: 1366px) {
     width: 150px;
@@ -52,6 +57,9 @@
       margin: -9px 9px;
       box-shadow: -9px 9px color('active');
       outline: none;
+      @media screen and (min-width: 3840px) {
+        box-shadow: -20px 20px color('active');
+      }
     }
   }
   &:hover {
@@ -65,6 +73,9 @@
     .card-body {
       box-shadow: -9px 9px color('active');
       margin: -9px 9px;
+      @media screen and (min-width: 3840px) {
+        box-shadow: -20px 20px color('active');
+      }
     }
   }
   &-body {
@@ -74,8 +85,11 @@
     transition: all 0.15s ease-in;
     background-size: cover;
     font-size: 14px;
-    @media screen and (min-width: 1920px) and (max-height: 1080px) {
+    @media screen and (min-width: 1920px) {
       font-size: 20px;
+    }
+    @media screen and (min-width: 3840px) {
+      font-size: 40px;
     }
     @media screen and (max-width: 1366px) {
       font-size: 12px;
