--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -3,7 +3,7 @@
   height: 28em;
   position: absolute;
   // add left: 15em if collection more than 2 items and nav is hidden
-  left: 50em;
+  left: 15em;
   top: 18em;
   padding: 20px;
   overflow: hidden;
@@ -17,6 +17,8 @@
   position: relative;
   z-index: 9;
   margin: 0 20px;
+  // for move collection item use transform with a negative value for example : transform: translateX(-640px);
+  transform: translateX(0);
   &:hover {
     .collection-back {
       &__one {
