--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -4,6 +4,9 @@
   @media screen and (min-width: 1920px) {
     font-size: 20px;
   }
+  @media screen and (min-width: 3840px) {
+    font-size: 40px;
+  }
   @media screen and (max-width: 1366px) {
     font-size: 14px;
   }
@@ -50,6 +53,8 @@
     }
   }
   &-action {
+    height: 5em;
+    width: 100%;
     padding: 20px 0;
     position: relative;
   }
@@ -60,6 +65,9 @@
   right: 0.9em;
   top: 1.3em;
   width: 16em;
+  @media screen and (min-width: 3840px) {
+    top: 0.3em;
+  }
   &__title {
     font-family: 'Roboto-Bold';
     font-size: 1em;
@@ -76,15 +84,21 @@
     left: 0;
     z-index: 2;
     &:hover {
-      background: #242c33;
-      color: color('primary');
+      background: color('active');
+      color: #242c33;
       box-shadow: 0px 5px 9px #000;
+      .icon {
+        background: url('../img/down-arrow-black.png');
+      }
     }
     &:focus {
       outline: none;
       background: #242c33;
       color: color('primary');
       box-shadow: 0px 5px 9px #000;
+      .icon {
+        background: url('../img/down-arrow.png');
+      }
     }
     span {
       display: inline-block;
@@ -100,6 +114,11 @@
       @media screen and (min-width: 1920px) {
         width: 0.8em;
         height: 0.8em;
+      }
+      @media screen and (min-width: 3840px) {
+        background: url('../img/down-chevron.png');
+        width: 0.8em;
+        height: 0.7em;
       }
       @media screen and (max-width: 1366px) {
         width: 1.2em;
