--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -32,6 +32,7 @@ body {
     }
     &--inner {
         background: url('https://i.imgur.com/Z2lWU8K.jpg');
+        background-size: cover;
         &::after {
             content: '';
             position: absolute;
@@ -59,8 +60,11 @@ body {
     top: 3em;
     left: 50%;
     transform: translate(-50%, 10em);
-    @media screen and (min-width: 1920px) and (max-height: 1080px) {
+    @media screen and (min-width: 1920px) {
         width: 94em;
+    }
+    @media screen and (min-width: 3840px) {
+        width: 176em;
     }
     @media screen and (max-width: 1366px) {
         width: 53.2em;
@@ -88,18 +92,38 @@ body {
         color: #000;
         background: color('active');
         box-shadow: 0px 3px 9px #000;
+        .money-icon {
+            background: url('../img/ruble-currency-sign-black.png');
+        }
     }
     &:focus {
       outline: none;
       color: #000;
       background: color('active');
       box-shadow: 0px 3px 9px #000;
+        .money-icon {
+            background: url('../img/ruble-currency-sign-black.png');
+        }
     }
     &.active {
         color: #000;
         background: color('active');
         box-shadow: 0px 3px 9px #000;
+        .money-icon {
+            background: url('../img/ruble-currency-sign-black.png');
+        }
     }
-  }
+    &.disable {
+        display: none;
+    }
+    .money-icon {
+        background: url('../img/ruble-currency-sign.png');
+        width: 16px;
+        height: 16px;
+        display: block;
+        transition: all 0.15s ease-in;
+        display: inline-block;
+    }
+}
 
 /*END:base*/
