add adaptive 3840/2160, add class disable to btn, fixed hover on sort list, add icon ruble, add transform to collection item

--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -113,6 +113,7 @@ body {
             background: url('../img/ruble-currency-sign-black.png');
         }
     }
+    // add class disable if button was pressed
     &.disable {
         display: none;
     }
