add hidden title item

--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -11,7 +11,7 @@
   width: 43em;
   height: 100%;
   // add display none if nav menu is hidden
-  display: none;
+  display: block;
   background: url('../img/bg_fx_menu.png') no-repeat;
   left: 3.6em;
   top: 0;
