--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -3,11 +3,31 @@
   height: 28em;
   position: absolute;
   // add left: 15em if collection more than 2 items and nav is hidden
-  left: 15em;
+  left: 50em;
   top: 18em;
   padding: 20px;
   overflow: hidden;
   white-space: nowrap;
+  .collection-inner-title {
+    display: none;
+  }
+  // add collection-wrapper--title if navigation not on Collections-nav-list-item
+  &--title {
+    display: block;
+    height: auto;
+    font-size: 20px;
+    left: 35%;
+    top: 50%;
+    transform: translate(25%, -50%);
+    .collection-inner-title {
+      display: block;
+      span {
+        font-family: 'Roboto-Bold';
+        color: color('primary');
+        font-size: 5em;
+      }
+    }
+  }
 }
 .collection {
   width: 37em;
@@ -19,6 +39,10 @@
   margin: 0 20px;
   // for move collection item use transform with a negative value for example : transform: translateX(-640px);
   transform: translateX(0);
+  // add class hidden to .collection if navigation not on Collections-nav-list-item
+  &.hidden {
+    display: none
+  }
   &:hover {
     .collection-back {
       &__one {
