--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -114,7 +114,7 @@ body {
         }
     }
     // add class disable if button was pressed
-    &.disable {
+    &.disabled {
         display: none;
     }
     .money-icon {
