--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -2,12 +2,13 @@
 .collection-wrapper {
   height: 28em;
   position: absolute;
-  // add left: 15em if collection more than 2 items and nav is hidden
-  left: 50em;
+  // add left: 60% if collection more than 2 items and nav is hidden
+  left: 95%;
   top: 18em;
   padding: 20px;
   overflow: hidden;
   white-space: nowrap;
+  transform: translate(-50%, 0);
   .collection-inner-title {
     display: none;
   }
@@ -41,7 +42,7 @@
   transform: translateX(0);
   // add class hidden to .collection if navigation not on Collections-nav-list-item
   &.hidden {
-    display: none
+    display: none;
   }
   &:hover {
     .collection-back {
