--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -89,6 +89,11 @@
       box-shadow: 0px 5px 9px #000;
       .icon {
         background: url('../img/down-arrow-black.png');
+        @media screen and (min-width: 3840px) {
+          background: url('../img/down-chevron-big-black.png');
+          width: 0.8em;
+          height: 0.7em;
+        }
       }
     }
     &:focus {
@@ -98,6 +103,11 @@
       box-shadow: 0px 5px 9px #000;
       .icon {
         background: url('../img/down-arrow.png');
+        @media screen and (min-width: 3840px) {
+          background: url('../img/down-chevron.png');
+          width: 0.8em;
+          height: 0.7em;
+        }
       }
     }
     span {
