--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -94,6 +94,11 @@ body {
         box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            @media screen and (min-width: 3840px) {
+                background: url('../img/ruble-currency-sign-big-black.png');
+                width: 32px;
+                height: 32px;
+            }
         }
     }
     &:focus {
@@ -103,6 +108,11 @@ body {
       box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            @media screen and (min-width: 3840px) {
+                background: url('../img/ruble-currency-sign-big-black.png');
+                width: 32px;
+                height: 32px;
+            }
         }
     }
     &.active {
@@ -111,6 +121,11 @@ body {
         box-shadow: 0px 3px 9px #000;
         .money-icon {
             background: url('../img/ruble-currency-sign-black.png');
+            @media screen and (min-width: 3840px) {
+                background: url('../img/ruble-currency-sign-big-black.png');
+                width: 32px;
+                height: 32px;
+            }
         }
     }
     // add class disable if button was pressed
@@ -124,6 +139,11 @@ body {
         display: block;
         transition: all 0.15s ease-in;
         display: inline-block;
+        @media screen and (min-width: 3840px) {
+            background: url('../img/ruble-currency-sign-big-light.png');
+            width: 32px;
+            height: 32px;
+        }
     }
 }
 
