--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -60,14 +60,13 @@ body {
     top: 3em;
     left: 50%;
     transform: translate(-50%, 10em);
-    @media screen and (min-width: 1920px) {
-        width: 94em;
-    }
     @media screen and (min-width: 3840px) {
         width: 176em;
     }
     @media screen and (max-width: 1366px) {
         width: 53.2em;
+        top: 0;
+        transform: translate(-50%, 3em);
     }
 }
 
