--- a/app/scss/assets/base-assets/description.scss
+++ b/app/scss/assets/base-assets/description.scss
@@ -41,6 +41,11 @@
         width: 16px;
         height: 16px;
         background: url('../img/layers.png');
+        @media screen and (min-width: 3840px) {
+          background: url('../img/layers-big.png');
+          width: 24px;
+          height: 24px;
+        }
       }
       .descroption-title {
         color: color('primary');
