--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -15,10 +15,16 @@
   left: 3.6em;
   top: 0;
   position: absolute;
+  @media screen and (max-width: 1366px) {
+    background-size: contain;
+    left: 2.5em;
+    width: 32em;
+  }
   &__holder {
     position: absolute;
-    top: 15em;
-    left: 17.3em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   &-title {
     color: color('primary');
