--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -15,16 +15,25 @@
   left: 3.6em;
   top: 0;
   position: absolute;
+  @media screen and (min-width: 3840px) {
+    left: 7em;
+    width: 96em;
+    background-size: contain;
+  }
   @media screen and (max-width: 1366px) {
     background-size: contain;
     left: 2.5em;
     width: 32em;
   }
   &__holder {
+    font-size: 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    @media screen and (min-width: 3840px) {
+      font-size: 40px;
+    }
   }
   &-title {
     color: color('primary');
@@ -39,6 +48,9 @@
       display: block;
       width: 100%;
       margin-bottom: 10px;
+      @media screen and (min-width: 3840px) {
+        margin-bottom: 25px;
+      }
       span {
         border-radius: 20px;
         padding: 10px 15px;
@@ -47,6 +59,11 @@
         font-family: 'Roboto-Bold';
         color: color('gray');
         transition: all 0.15s ease-in;
+        @media screen and (min-width: 3840px) {
+          font-size: 40px;
+          padding: 20px 30px;
+          border-radius: 40px;
+        }
         &:hover {
           background: color('active');
           color: #000;
@@ -74,6 +91,11 @@
           color: #000;
           font-family: 'Roboto-Bold';
           box-shadow: 2px 4px 16px -3px #000;
+          @media screen and (min-width: 3840px) {
+            font-size: 40px;
+            padding: 20px 30px;
+            border-radius: 40px;
+          }
         }
       }
       &:focus {
