--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -109,7 +109,7 @@
   height: 100%;
   overflow: hidden;
   display: inline-block;
-  background: url('../img/bg_fx_innerpage.png') no-repeat;
+  background: url('../img/back_fx.svg') no-repeat;
   background-size: cover;
   @media screen and (min-width: 3200px) {
     width: 290px;
