--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -18,12 +18,15 @@
   @media screen and (min-width: 3840px) {
     height: 60em;
   }
-  @media screen and (max-width: 1755px) {
+  @media screen and (max-width: 1800px) {
     height: 24em;
   }
-  @media screen and (max-width: 1366px) {
+  @media screen and (max-width: 1400px) {
     left: 100%;
     height: 24em;
+  }
+  @media screen and (max-width: 1320px) {
+    height: 19em;
   }
   .collection-inner-title {
     display: none;
@@ -76,13 +79,17 @@
     width: 80em;
     height: 55em;
   }
-  @media screen and (max-width: 1755px) {
+  @media screen and (max-width: 1800px) {
     width: 30em;
     height: 20em;
   }
-  @media screen and (max-width: 1366px) {
+  @media screen and (max-width: 1400px) {
     width: 30em;
     height: 20em;
+  }
+  @media screen and (max-width: 1320px) {
+      width: 27em;
+      height: 17em;
   }
   &.hidden {
     display: none;
@@ -156,14 +163,19 @@
       width: 80em;
       height: 55em;
     }
-    @media screen and (max-width: 1755px) {
+    @media screen and (max-width: 1800px) {
       width: 30em;
       height: 20em;
     }
-    @media screen and (max-width: 1366px) {
+    @media screen and (max-width: 1400px) {
       width: 30em;
       height: 20em;
     }
+    @media screen and (max-width: 1320px) {
+      width: 27em;
+      height: 17em;
+    }
+    
     &::after {
       content: '';
       position: absolute;
