add adapive for collection item if item more then 3

--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -10,7 +10,7 @@
   width: 44em;
   height: 100%;
   // add display none if nav menu is hidden
-  display: block;
+  display: none;
   background: url('../img/bg_fx_menu.png') no-repeat;
   background-position: right center;
   background-size: cover;
