--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -138,7 +138,7 @@
   }
 }
 .hide-menu {
-  animation: hideMenu 1s ease-in-out normal;
+  animation: hideMenu 2s ease-in-out alternate forwards;
 }
 
 @keyframes hideMenu {
