--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -28,7 +28,7 @@ body {
         width: 100%;
         height: 100%;
         z-index: 3;
-        background: url('../img/BG_Radial_gradient_test.png') no-repeat;
+        background: url('../img/BG_Radial_gradient_test') no-repeat;
         background-size: cover;
         background-position: center center;
     }
@@ -43,7 +43,7 @@ body {
             width: 100%;
             height: 100%;
             z-index: -1;
-            background: url('../img/BG_Radial_gradient_test.png') no-repeat;
+            background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
         }
     }
 }
